unpackaged/main/default/objects/Opportunity/fields/CR_Product__c.field-meta.xml
<CustomField>
    <fullName>CR_Product__c</fullName>
    <description>For Consulting and AMS Opportunity</description>
    <label>CR Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMS Package</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Process Management</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources and Payroll</fullName>
            </value>
            <value>
                <fullName>Performance Planning</fullName>
            </value>
            <value>
                <fullName>Property and Rating</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>ePlanning</fullName>
            </value>
            <value>
                <fullName>Spatial</fullName>
            </value>
            <value>
                <fullName>Multi-Product</fullName>
            </value>
            <value>
                <fullName>JRA AM</fullName>
            </value>
            <value>
                <fullName>Adapt</fullName>
            </value>
            <value>
                <fullName>AMS ProdPack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>