unpackaged/main/default/objects/Opportunity/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <formula>Account.Total_ASM__c + Account.Total_Cloud__c + Account.Total_Licence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>