unpackaged/main/default/objects/Opportunity/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <formula>Customer_Contact__r.Email</formula>
    <label>Customer Contact Email</label>
    <type>Text</type>
</CustomField>