unpackaged/main/default/objects/Opportunity/fields/Customer_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_First_Name__c</fullName>
    <formula>Customer_Contact__r.FirstName</formula>
    <label>Customer Contact First Name</label>
    <type>Text</type>
</CustomField>