unpackaged/main/default/objects/Opportunity/fields/Customer_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Mobile__c</fullName>
    <formula>Customer_Contact__r.MobilePhone</formula>
    <label>Customer Contact Mobile</label>
    <type>Text</type>
</CustomField>