unpackaged/main/default/objects/Opportunity/fields/Customer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone__c</fullName>
    <formula>Customer_Contact__r.Phone</formula>
    <label>Customer Contact Phone</label>
    <type>Text</type>
</CustomField>