unpackaged/main/default/objects/Opportunity/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <formula>Account.Customer_Since__c</formula>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>