unpackaged/main/default/objects/Opportunity/fields/Date_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Engagement__c</fullName>
    <inlineHelpText>For mobilisation plan</inlineHelpText>
    <label>Last Version Date</label>
    <type>Date</type>
</CustomField>