unpackaged/main/default/objects/Opportunity/fields/Date_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Customer__c</fullName>
    <description>Date Sent to Customer</description>
    <label>Date Sent to Customer</label>
    <type>Date</type>
</CustomField>