unpackaged/main/default/objects/Opportunity/fields/Dates_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Dates_Preferred__c</fullName>
    <description>Days/Dates Requested</description>
    <label>Days/Dates Requested</label>
    <type>TextArea</type>
</CustomField>