unpackaged/main/default/objects/Opportunity/fields/Days_Requested__c.field-meta.xml
<CustomField>
    <fullName>Days_Requested__c</fullName>
    <description>Application Consulting Days Requested</description>
    <inlineHelpText>#Application Consulting Days Requested</inlineHelpText>
    <label># Days Requested</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>