unpackaged/main/default/objects/Opportunity/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <formula>IF(Amount&lt;100000, &#39;1. Small &lt;100K&#39;, 
IF(Amount&lt;=500000, &#39;2. Medium 100K-500K&#39;,  
&#39;3. Large &gt;500K&#39;))</formula>
    <label>Deal Size</label>
    <type>Text</type>
</CustomField>