unpackaged/main/default/objects/Opportunity/fields/Delayed_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Payment_Term__c</fullName>
    <label>Delayed Payment Term (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>