unpackaged/main/default/objects/Opportunity/fields/Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Completed</label>
    <type>Checkbox</type>
</CustomField>