unpackaged/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It&#39;s used by Sales Operations as part of reconciliation process to ensure pricing/the CAM&#39;s are filling in the discount % fields and they are doing so accurately.  This field is linked to Pricebook so easily  to tell if the discount % on the exported pricing does not match the discount allowed under the behavioural discounting model.</description>
    <inlineHelpText>Exported from Price book</inlineHelpText>
    <label>Discount Requested %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>