unpackaged/main/default/objects/Opportunity/fields/Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approved__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The CAM&#39;s/Pricing is responsible for filling this field in per the allowances under the behavioural discounting model.</inlineHelpText>
    <label>Eligible Behavioural Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>