unpackaged/main/default/objects/Opportunity/fields/Estimated_Daily_Travel_Charge__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Daily_Travel_Charge__c</fullName>
    <inlineHelpText>Will be default value from account once saved. Can override if needed for total charge which will be shown on CR form.</inlineHelpText>
    <label>Estimated Travel Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>