unpackaged/main/default/objects/Opportunity/fields/Estimated_Days_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Days_Effort__c</fullName>
    <inlineHelpText>Estimated Days Effort for Implementation</inlineHelpText>
    <label>Implementation Services Effort (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>