unpackaged/main/default/objects/Opportunity/fields/Exceed_Ratio_Category__c.field-meta.xml
<CustomField>
    <fullName>Exceed_Ratio_Category__c</fullName>
    <inlineHelpText>Reason for exceeding target licence or SaaS services ratio</inlineHelpText>
    <label>Exceed Ratio Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licence Discount</fullName>
            </value>
            <value>
                <fullName>Low Concurrent User Count</fullName>
            </value>
            <value>
                <fullName>Customer Additional Requirements</fullName>
            </value>
            <value>
                <fullName>Complex Implementation</fullName>
            </value>
            <value>
                <fullName>Product Readiness.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>