unpackaged/main/default/objects/Opportunity/fields/Exec_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Exec_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by SDI team</inlineHelpText>
    <label>SDI Forecast</label>
    <type>Checkbox</type>
</CustomField>