unpackaged/main/default/objects/Opportunity/fields/Exec_Review__c.field-meta.xml
<CustomField>
    <fullName>Exec_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by Strategic Sales GM</inlineHelpText>
    <label>Top 10 Forecast Deal</label>
    <type>Checkbox</type>
</CustomField>