unpackaged/main/default/objects/Opportunity/fields/Extensions_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Extensions_Increase_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extensions Increase Rate</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Opportunities (Extensions Increase Rate)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>