unpackaged/main/default/objects/Opportunity/fields/Final_Cloud_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Final_Cloud_Ratio__c</fullName>
    <inlineHelpText>Used by Sales team/Pricing when close a  SaaS, SaaS Flip or Cloud deal</inlineHelpText>
    <label>Final Cloud Ratio at Closure</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>