unpackaged/main/default/objects/Opportunity/fields/Final_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount__c</fullName>
    <inlineHelpText>Used by Sales team/Pricing when close a deal</inlineHelpText>
    <label>Final Discount at Closure %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>