unpackaged/main/default/objects/Opportunity/fields/Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount__c</fullName>
    <description>This field is utilised by the Finance team to update with actual amount after an opportunity has been transacted</description>
    <inlineHelpText>Finance Revenue Recognised Amount on Licence Fee</inlineHelpText>
    <label>Finance Rev Rec Amount (Licence Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>