unpackaged/main/default/objects/Opportunity/fields/Finance_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount_ARR__c</fullName>
    <inlineHelpText>Finance Revenue Recognised Amount on ARR</inlineHelpText>
    <label>Finance Rev Rec Amount (ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>