unpackaged/main/default/objects/Opportunity/fields/Finance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Finance_Comments__c</fullName>
    <label>Finance Comments</label>
    <type>TextArea</type>
</CustomField>