unpackaged/main/default/objects/Opportunity/fields/First_Year_Cloud_Fee__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Cloud_Fee__c</fullName>
    <formula>Cloud_Service_Fee_per_year__c + Annual_SaaS_Cloud_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is either Annual Cloud Fee or First Year SaaS Fee</inlineHelpText>
    <label>First Year Cloud Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>