unpackaged/main/default/objects/Opportunity/fields/First_Year_Cloud_Revenue__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Cloud_Revenue__c</fullName>
    <formula>(Date(IF(Month(CloseDate)&gt;9,Year(CloseDate)+1,Year(CloseDate)),9,30)- CloseDate+1)* First_Year_Cloud_Fee__c /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Cloud Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>