unpackaged/main/default/objects/Opportunity/fields/Forecast_Level__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Level__c</fullName>
    <formula>IF(IsWon,&#39;Actual&#39;, 
IF(AND(NOT(IsWon), OO_Forecast__c =True, Record_Type__c == &#39;Application Managed Services&#39;) ,&#39;AMS Forecast&#39;, 
IF(AND(NOT(IsWon),  GM_Forecast__c =True, Record_Type__c == &#39;Application Managed Services&#39;) ,&#39;AMS Forecast&#39;,
IF(AND(NOT(IsWon), Include_in_Forecast__c =True, OO_Forecast__c =False) ,&#39;Upside&#39;, 
IF(AND(NOT(IsWon), OO_Forecast__c =True) ,&#39;In RM  Forecast&#39;, 
IF(AND(NOT(IsWon),Include_in_Forecast__c = False) ,&#39;z_Pipeline&#39;, 
&#39;ZZZZ&#39;))))))</formula>
    <label>Forecast Level</label>
    <type>Text</type>
</CustomField>