unpackaged/main/default/objects/Opportunity/fields/GM_Forecast__c.field-meta.xml
<CustomField>
    <fullName>GM_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Cloud and AMS opportunities</description>
    <label>Product GM Forecast</label>
    <type>Checkbox</type>
</CustomField>