unpackaged/main/default/objects/Opportunity/fields/Group_Region__c.field-meta.xml
<CustomField>
    <fullName>Group_Region__c</fullName>
    <formula>Account.Group_Region__c</formula>
    <label>Group Region</label>
    <type>Text</type>
</CustomField>