unpackaged/main/default/objects/Opportunity/fields/Include_in_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opportunities that have a 50% chance of closing that particular quarter</inlineHelpText>
    <label>Upside</label>
    <type>Checkbox</type>
</CustomField>