unpackaged/main/default/objects/Opportunity/fields/Initial_Period_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_Increase_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Period Increase Rate</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>