unpackaged/main/default/objects/Opportunity/fields/Initial_Period_Increase_Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_Increase_Rate_Name__c</fullName>
    <formula>Initial_Period_Increase_Rate__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Period Increase Rate Name</label>
    <type>Text</type>
</CustomField>