unpackaged/main/default/objects/Opportunity/fields/Internal_Buying_Process__c.field-meta.xml
<CustomField>
    <fullName>Internal_Buying_Process__c</fullName>
    <label>Decision Criteria</label>
    <type>TextArea</type>
</CustomField>