unpackaged/main/default/objects/Opportunity/fields/Keep_Prices_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Keep_Prices_Expiry_Date__c</fullName>
    <label>Keep Prices Expiry Date</label>
    <type>Date</type>
</CustomField>