unpackaged/main/default/objects/Opportunity/fields/Lawyer_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Allocated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>T1 Lawyer Allocated</inlineHelpText>
    <label>Lawyer Allocated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Lawyer Allocated)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>