unpackaged/main/default/objects/Opportunity/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Populated with unique ID generated by legacy system, to be twinned down to downstream records</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>