unpackaged/main/default/objects/Opportunity/fields/Legal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Legal_Comments__c</fullName>
    <label>Legal Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>