unpackaged/main/default/objects/Opportunity/fields/Legal_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Legal_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Engaged</label>
    <type>Checkbox</type>
</CustomField>