unpackaged/main/default/objects/Opportunity/fields/Licence_Model__c.field-meta.xml
<CustomField>
    <fullName>Licence_Model__c</fullName>
    <label>Opportunity Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Perpetual &amp; Cloud Uplift</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>SaaS Flip</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>