unpackaged/main/default/objects/Opportunity/fields/Linked_Perpetual_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Linked_Perpetual_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The link from an perpetual on cloud opp to the orginal perpetual service contract.</description>
    <label>Linked Perpetual Agreement</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Opportunities (Linked Perpetual Agreement)</relationshipLabel>
    <relationshipName>Perpetual_OnCloud_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>