unpackaged/main/default/objects/Opportunity/fields/Max_Eligible_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Eligible_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Twin field</description>
    <label>Max Eligible Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>