unpackaged/main/default/objects/Opportunity/fields/Mobilisation_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Weeks__c</fullName>
    <formula>( Project_Start_Date__c - CloseDate) /7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Project Start Date - Opportunity Close Date)/7</inlineHelpText>
    <label>Mobilisation Weeks</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>