unpackaged/main/default/objects/Opportunity/fields/Module_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_Modified_Date__c</fullName>
    <description>Module Modified Date from OpportunityModuleItem. Used to trigger Opportunity to add item split records.</description>
    <label>Module Modified Date</label>
    <summarizedField>OpportunityModuleItem__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>OpportunityModuleItem__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>