unpackaged/main/default/objects/Opportunity/fields/Next_Step_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Modified_Date__c</fullName>
    <label>Next Step Modified Date</label>
    <type>Date</type>
</CustomField>