unpackaged/main/default/objects/Opportunity/fields/No_Consulting_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Consulting_Reason__c</fullName>
    <label>No Consulting Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ConsultingS_Required__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>AMS Program</fullName>
            </value>
            <value>
                <fullName>Uplift/Add User</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Customer has skills</fullName>
            </value>
            <value>
                <fullName>Competitor/Lanluas</fullName>
            </value>
            <value>
                <fullName>Competitor/Galaxy42</fullName>
            </value>
            <value>
                <fullName>Competitor Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>