unpackaged/main/default/objects/Opportunity/fields/No_of_Trainees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Trainees__c</fullName>
    <description>No of People</description>
    <label>No of People</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>