unpackaged/main/default/objects/Opportunity/fields/OO_Forecast__c.field-meta.xml
<CustomField>
    <fullName>OO_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OO Forecast</description>
    <inlineHelpText>RMs tick only.</inlineHelpText>
    <label>RM Forecast</label>
    <type>Checkbox</type>
</CustomField>