unpackaged/main/default/objects/Opportunity/fields/OO_ForecastPcnt__c.field-meta.xml
<CustomField>
    <fullName>OO_ForecastPcnt__c</fullName>
    <formula>IF(Amount&gt;0,RM_Forecast_Amount__c /Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Forecast Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>