unpackaged/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <displayFormat>OPP-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity ID</label>
    <type>AutoNumber</type>
</CustomField>