unpackaged/main/default/objects/Opportunity/fields/Opportunity_Industry__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Industry__c</fullName>
    <inlineHelpText>Opportunity Industry can be different from Industry/Vertical on Account for revenue split purpose. It&#39;s managed by Sales Operation Team.</inlineHelpText>
    <label>Opportunity Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
                <color>#0B6FCE</color>
                <label>Education</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <color>#78C953</color>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <color>#E27001</color>
                <label>Government</label>
            </value>
            <value>
                <fullName>Health and Community Services</fullName>
                <color>#A845DC</color>
                <label>Health and Community Services</label>
            </value>
            <value>
                <fullName>Asset Intensive</fullName>
                <color>#F3D904</color>
                <label>Asset Intensive</label>
            </value>
            <value>
                <fullName>Project Intensive</fullName>
                <color>#A53711</color>
                <label>Project Intensive</label>
            </value>
            <value>
                <fullName>Local Government</fullName>
                <color>#66E9BD</color>
                <label>Local Government</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#0B24BE</color>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Finance Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>