unpackaged/main/default/objects/Opportunity/fields/Opportunity_Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Push_Counter__c</fullName>
    <description>Formula of opportunity push counter so this can be on layout and the input field only updated via workflows</description>
    <formula>Push_Counter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated by Push Counter field (Updated by workflows)</inlineHelpText>
    <label>Opportunity Push Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>