unpackaged/main/default/objects/Opportunity/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <inlineHelpText>Opportunity Region can be different from Group Region on Account for revenue split purpose. It&#39;s managed by Sales Operation Team.</inlineHelpText>
    <label>Opportunity Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - QLD</fullName>
                <color>#990000</color>
                <label>01 - QLD</label>
            </value>
            <value>
                <fullName>02 - NSW</fullName>
                <color>#33CCFF</color>
                <label>02 - NSW</label>
            </value>
            <value>
                <fullName>03 - VIC</fullName>
                <color>#0B6FCE</color>
                <label>03 - VIC</label>
            </value>
            <value>
                <fullName>04 - SA &amp; NT</fullName>
                <color>#FF0000</color>
                <label>04 - SA &amp; NT</label>
            </value>
            <value>
                <fullName>05 - WA</fullName>
                <color>#F3D904</color>
                <label>05 - WA</label>
            </value>
            <value>
                <fullName>06 - ACT</fullName>
                <color>#6633FF</color>
                <label>06 - ACT</label>
            </value>
            <value>
                <fullName>07 - TAS</fullName>
                <color>#009900</color>
                <label>07 - TAS</label>
            </value>
            <value>
                <fullName>11 - NZN</fullName>
                <color>#330099</color>
                <label>11 - NZN</label>
            </value>
            <value>
                <fullName>12 - NZS</fullName>
                <color>#CC9933</color>
                <label>12 - NZS</label>
            </value>
            <value>
                <fullName>20 - SEAP</fullName>
                <color>#B6E32E</color>
                <label>20 - SEAP</label>
            </value>
            <value>
                <fullName>23 - UK</fullName>
                <color>#2F5D85</color>
                <label>23 - UK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>