unpackaged/main/default/objects/Opportunity/fields/Opt_Out_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Lost_Date__c</fullName>
    <label>Opt Out/Lost Date</label>
    <type>Date</type>
</CustomField>