unpackaged/main/default/objects/Opportunity/fields/Opt_Out_No_Bid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_No_Bid_Reason__c</fullName>
    <label>Opt Out / No Bid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No real opportunity</fullName>
            </value>
            <value>
                <fullName>Postponed Indefinitely</fullName>
            </value>
            <value>
                <fullName>Replaced with different opportunity</fullName>
            </value>
            <value>
                <fullName>Unable to meet requirements</fullName>
            </value>
            <value>
                <fullName>Converted to Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>