unpackaged/main/default/objects/Opportunity/fields/Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Reason__c</fullName>
    <inlineHelpText>Enter Reason why opportunity was opted out of</inlineHelpText>
    <label>Opt Out Reason Comments</label>
    <type>TextArea</type>
</CustomField>