unpackaged/main/default/objects/Opportunity/fields/Original_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Opportunities (Original Service Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>