unpackaged/main/default/objects/Opportunity/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <inlineHelpText>Please provide a brief overview of the opportunity</inlineHelpText>
    <label>Overview</label>
    <type>TextArea</type>
</CustomField>